# DiabloBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
bot/: bot.py
src/: database.sql  manage.py  pytest.ini  setup.cfg
src/dashboard/: forms.py  views.py
src/guilds/: admin.py  apps.py  models.py
src/guilds/fixtures/: terror_zone_runwizard.json
src/guilds/migrations/: 0001_initial.py  0002_alter_channels_name_alter_roles_name.py  0002_remove_terrorzonetemplate_guild_and_more.py  0002_settings_max_time.py  0003_alter_roles_unique_together.py  0003_alter_settings_max_time.py  0003_alter_terrorzones_options_and_more.py  0004_alter_roles_name.py  0004_alter_settings_max_time.py  0004_alter_terrorzones_options_alter_terrorzones_zone.py  0005_alter_channels_name_alter_channels_unique_together.py  0005_alter_terrorzones_zone.py  0005_settings_fasttrade_channel_role.py  0006_settings_fasttrade_channel_time.py  0007_alter_terrorzones_sparkly_chests.py  0008_alter_terrorzones_key.py
src/social/: admin.py  models.py
src/social/migrations/: 0001_initial.py
src/templates/: base.html
src/tests/: fake_bot.py  fake_guild.py  test_bot.py
src/users/: admin.py  backends.py  managers.py  models.py  urls.py  utils.py  views.py
src/users/migrations/: 0001_initial.py  0002_discorduser_joined_at.py  0002_discorduser_removed_at_discorduser_roles.py  0002_user_cookies.py  0003_alter_discorduser_unique_together.py  (+1 more)
src/www/: settings.py  urls.py
(+14 files in other folders)
